# koi-api

./: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint_and_test.yaml  tagged_release.yaml
koi_api/: __init__.py
koi_api/apidef/: template.yml
koi_api/apidef/instance/: get.yml  post.yml
koi_api/apidef/instance_collection/: delete.yml  get.yml  put.yml
koi_api/apidef/instance_inference/: get.yml
koi_api/apidef/model/: get.yml  post.yml
koi_api/apidef/model_collection/: delete.yml  get.yml  put.yml
koi_api/common/: name_generator.py  return_codes.py  string_constants.py
koi_api/config/: base.py  debug.py  docker.py
koi_api/orm/: __init__.py  access.py  file.py  instance.py  label_request.py  model.py  parameters.py  role.py  sample.py  user.py
koi_api/persistence/: __init__.py  core.py
koi_api/resources/: __init__.py  access.py  base.py  health.py  instance.py  instance_tags.py  label_request.py  lifetime.py  model.py  parameters.py  role.py  sample.py  sample_flags.py  sample_tags.py  user.py
tests/: __init__.py  access_test.py  conftest.py  health_test.py  instance_descriptor_test.py  instance_parameters_test.py  instance_tags_test.py  instances_test.py  label_request_test.py  login_test.py  model_parameters_test.py  model_test.py  role_test.py  samples_test.py  users_test.py
tests/fixtures/: __init__.py
tests/fixtures/model/: __model__.py  __param__.py
