[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "koi-api"
version = "0.4.3"
description = "Backend server for the KOI-System"
license.file = "COPYING.LESSER"
readme = "README.md"
requires-python = ">=3.8,<3.11"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]

dependencies = [
    "sqlalchemy <=1.4.39",
    "flask <=2.1.3",
    "flask-cors <= 3.0.10",
    "flask_sqlalchemy <=2.5.1",
    "flask_restful <=0.3.9",
    "PyMySql",
    "cryptography",
]

[project.urls]
"Homepage" = "https://github.com/koi-learning"
